# photography-portfolio

./: .dockerignore  .envrc  .gitignore  Dockerfile  LICENSE  Makefile  R2_OPTIMIZATION.md  README.md  astro.config.mjs  compose.yaml  docker-compose.yml  nginx-production.conf  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: latest.yaml  pr.yaml
image_processing_pipeline/: pyproject.toml
image_processing_pipeline/src/image_processing_pipeline/: __init__.py  __main__.py  cli.py  image_converter.py  image_metadata.py  yaml_generator.py
infra/: nginx-cache.conf  nginx.conf
public/: site.webmanifest
src/assets/: me-display.avif
src/components/: Breadcrumbs.astro  Footer.astro  Header.astro  Lightbox.astro  Logo.astro  MetadataCard.astro  OptimizedImage.astro  PhotoCard.astro  PhotoCardOptimized.astro  ProfileSection.astro  Stats.astro  Watermark.astro  Welcome.astro
src/data/: about.yaml  collection_template.yaml  concerts.yaml  stats.yaml
src/data/collections/: tokyo_streets.yaml  yokohama.yaml
src/layouts/: Layout.astro
src/lib/: imageMetadata.ts
src/pages/: 404.astro  about.astro  index.astro  stats.astro
src/pages/collections/: [collection].astro  index.astro
